--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.2",
-    "axios": "^1.6.7"
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
